--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Carter Smith\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1428571428571428\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 8/7\n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +58,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "6\n",
+      "24\n",
+      "120\n",
+      "720\n",
+      "5040\n",
+      "40320\n",
+      "362880\n"
+     ]
+    }
+   ],
+   "source": [
+    "prevNum=1\n",
+    "for num in range(1,10):\n",
+    "    print(num*prevNum)\n",
+    "    prevNum=num*prevNum"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "def average(lst):\n",
+    "    sum = 0\n",
+    "    for num in lst:\n",
+    "        sum+=num\n",
+    "    return sum/len(lst)\n",
+    "print(average(testlist))"
    ]
   },
   {
@@ -82,13 +128,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.13973309\n",
+      "2.2113100189\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "\n",
+    "def variance(lst):\n",
+    "    avg = average(lst)\n",
+    "    new_lst = []\n",
+    "    for e in list1:\n",
+    "        new_lst.append((e-avg)**2)\n",
+    "    return average(new_lst)\n",
+    "print(variance(list1))\n",
+    "print(variance(list2))\n"
    ]
   },
   {
@@ -105,10 +168,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['BAL', 'BOS', 'NYY', 'TB', 'TOR']\n",
+      "['HOU', 'LAA', 'OAK', 'SEA', 'TEX']\n",
+      "['TEX', 'SEA', 'OAK', 'LAA', 'HOU', 'MIN', 'KC', 'DET', 'CLE', 'CWS', 'TOR', 'TB', 'NYY', 'BOS', 'BAL']\n",
+      "['BAL', 'NYY', 'TOR', 'CLE', 'KC', 'HOU', 'OAK', 'TEX']\n",
+      "['BAL', 'TB', 'CLE', 'MIN', 'OAK']\n"
+     ]
+    }
+   ],
+   "source": [
+    "al_teams = [\"BAL\", \"BOS\", \"NYY\", \"TB\", \"TOR\", \"CWS\", \"CLE\", \"DET\", \"KC\", \"MIN\", \"HOU\", \"LAA\", \"OAK\", \"SEA\", \"TEX\"]\n",
+    "\n",
+    "print(al_teams[:5]) #first five\n",
+    "print(al_teams[-5:]) #last five\n",
+    "print(al_teams[::-1]) #reversed\n",
+    "print(al_teams[::2]) #every second element\n",
+    "print(al_teams[::3]) #every third element\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +209,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'WEB MINING & APPLIED NLP', 'courseNum': '44620', 'term': 'F24', 'hours': 3, 'objectives': ['Manage Python libraries and packages', ' Interact with Hosted Version Control Systems', ' Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "course = {\n",
+    "    \"name\":\"WEB MINING & APPLIED NLP\",\n",
+    "    \"courseNum\" : \"44620\",\n",
+    "    \"term\":\"F24\",\n",
+    "    \"hours\":3,\n",
+    "    \"objectives\":[\"Manage Python libraries and packages\",\" Interact with Hosted Version Control Systems\",\" Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.\"]\n",
+    "}\n",
+    "print(course)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,11 +263,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "unique = set(values)\n",
+    "print(len(unique))"
    ]
   },
   {
@@ -188,7 +298,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
